<resources>
    <string name="app_name">Warique</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="ver_warique">Ver Warique</string>
    <string name="ver_reserva">Ver Reserva</string>
    <string name="atras">Atras</string>
    <string name="salir">Salir</string>
    <string name="mensaje_validacion">Debe de ingresar todos los campos</string>
    <string name="mensaje_confirmacion">Se realizo la reserva</string>
    <string name="actualizar">Actualizar</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
</resources>
